[tool.poetry]
authors     = ["Mugdha Arunim Ahmed <mugdhaarunimahmed2017@gmail.com>"]
description = "A Django file storage backend that leverages GitHub."
name        = "django-github-storage"
packages    = [{ include = 'github_storage' }]
version     = "0.1.0"

  [tool.poetry.dependencies]
  django   = ">=3.2.16,<=4.1.3"
  python   = ">=3.6,<=3.11"
  requests = { version = ">=2", python = ">=3.8,<=3.11" }

  [tool.poetry.group.dev.dependencies]
  black  = { version = "^22.10.0", python = ">=3.7,<=3.11" }
  django = { version = "^4.1.3", python = ">=3.8,<=3.11" }
  isort  = { version = "^5.10.1", python = ">=3.6.1,<=3.11" }
  pylint = { version = "^2.15.6", python = ">=3.7.2,<=3.11" }
